# otodom-analysis

./: .gitignore  README.md  ammenities.kml  ammenities_cache.pkl  apartments.kml  biedronki.kml  cache.pkl  clusters.kml  data.json  distance_cache.pkl  final_df.pkl  gratka_api.ipynb  lib.py  main.ipynb  main.py  out.json  page.txt  pyproject.toml  req.sh  requirements.txt  response.json  sample_entry.json  skm.json
lib/: __init__.py  data_science.py  how_close_is_it_service.py  preprocess.py  scrape.py
