[tool.poetry]
name = "otodom-analysis"
version = "0.1.0"
description = ""
authors = ["Piotr Ostrowski <piotrostr@google.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "otodom_analysis"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
numpy = "^1.25.2"
bs4 = "^0.0.1"
lxml = "^4.9.3"
matplotlib = "^3.7.2"
requests = "^2.31.0"
googlemaps = "^4.10.0"
gmaps = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
